--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,3 +70,8 @@ button[type="submit"] {
 button[type="submit"]:hover {
     background-color: #0056b3;
 }
+
+img.car-image {
+    max-width: 400px; 
+    width: 100%;
+}
