--- a/assets/css/car-availability-admin-settings-styles.css
+++ b/assets/css/car-availability-admin-settings-styles.css
@@ -10,8 +10,8 @@
     background-color: #c0392b !important;
 }
 
-#toplevel_page_car-availability-settings.current > a {
-    background-color: #c0392b !important;
+#toplevel_page_car-availability-settings .current > a {
+    background-color: #e74c3c !important;
 }
 
 #toplevel_page_car-availability-settings li a {
@@ -23,6 +23,9 @@
 
 #toplevel_page_car-availability-settings li a:hover {
     background-color: #c0392b !important;
+}
+#toplevel_page_car-availability-settings .dashicons-cloud::before {
+    color: #ffcbca !important;
 }
 /* menu:end */
 
@@ -69,5 +72,10 @@
     border-radius: 3px !important;
     font-size: 16px !important;
     cursor: pointer !important;
+    transition: background-color 0.3s ease !important;
+}
+
+input[type="submit"]:hover {
+    background-color: #c0392b !important;
     transition: background-color 0.3s ease !important;
 }
